--- a/src/app/components/tasa/tasa.component.css
+++ b/src/app/components/tasa/tasa.component.css
@@ -3,9 +3,15 @@
     margin:0;
     padding: 0
 }
+
+.row .col .card .card-title h1{
+    text-align:center;
+}
+
 div .card{
     margin: 20px;
-    width: 50%;
+    width: 500px;
+    height: 600px;
 }
 
 .form-group select{
@@ -13,7 +19,8 @@ div .card{
 }
 
 .row{
-    text-align:center;
+    text-align:left;
     padding:0px;
 
 }
+
