--- a/src/app/components/creargastosiniciales/creargastosiniciales.component.html
+++ b/src/app/components/creargastosiniciales/creargastosiniciales.component.html
@@ -1,38 +1,32 @@
 <div class="container">
   <div class="bg-white p-5">
 
-    <h2 class="text-center">Costos / Gastos iniciales</h2>
+    <h2 class="text-center">Costos / Gastos finales</h2>
     <div class="">
 
       <div class="input-group mb-3">
-        <select class="form-select" id="tipo">
-          <option selected>Motivo</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+        <select class="form-select" id="tipo1">
+          <option *ngFor="let gasto of gastosiniciales" value="{{gasto.id}}">{{gasto.nombre}}</option>
         </select>
       </div>
 
       <div class="row">
         <div class="col input-group mb-3">
-          <select class="form-select" id="formato">
-            <option selected>Valor expresado en</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+          <select class="form-select" id="motivo1">
+            <option *ngFor="let formato of formatos" value="{{formato.id}}">{{formato.nombre}}</option>
           </select>
         </div>
 
         <div class="col input-group mb-3">
-          <span class="input-group-text" id="monto"></span>
-          <input type="text" class="form-control" placeholder="Monto" aria-label="Username" aria-describedby="basic-addon1">
+          <span class="input-group-text" id="monto1"></span>
+          <input type="number" class="form-control" placeholder="Monto">
         </div>
       </div>
 
     </div>
 
     <div class="d-grid gap-2">
-      <button class="btn btn-primary" type="button">AGREGAR</button>
+      <button class="btn btn-primary" type="button" href="">AGREGAR</button>
     </div>
 
     <div class="table-responsive mt-3">
@@ -69,7 +63,7 @@
 
       <div class="input-group mb-3">
         <select class="form-select" id="tipo2">
-          <option *ngFor="let gasto of gastosiniciales" value="{{gasto.id}}">{{gasto.nombre}}</option>
+          <option *ngFor="let gasto of gastosfinales" value="{{gasto.id}}">{{gasto.nombre}}</option>
         </select>
       </div>
 
@@ -82,7 +76,7 @@
 
         <div class="col input-group mb-3">
           <span class="input-group-text" id="monto2"></span>
-          <input type="number" class="form-control" placeholder="Monto" aria-label="Username" aria-describedby="basic-addon1">
+          <input type="number" class="form-control" placeholder="Monto">
         </div>
       </div>
 
