--- a/src/app/components/crear-recibos/crear-recibos.component.html
+++ b/src/app/components/crear-recibos/crear-recibos.component.html
@@ -33,7 +33,8 @@
     <br>
 
     <div class="d-grid gap-2">
-      <button class="btn btn-primary" type="button">AGREGAR</button>
+      <button class="btn btn-primary" type="button" (click)="redirect2()">AGREGAR</button>
+      <button class="btn btn-primary" type="button" (click)="redirect()">IR A HISTORIAL</button>
     </div>
 
     <!-- <div class="table-responsive mt-3">
