--- a/src/app/components/tasa/tasa.component.html
+++ b/src/app/components/tasa/tasa.component.html
@@ -62,3 +62,5 @@
   </div>
   <div class="col"></div>
 </div>
+<app-creargastosiniciales> </app-creargastosiniciales>
+<app-crear-recibos></app-crear-recibos>
